# eos

./: .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  prod_release.yaml
app/: apps.py  asgi.py  auth.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
app/agents/: amex.py
eos/: admin.py  apps.py  asgi.py  settings.py  tasks.py  views.py  wsgi.py
eos/agents/: amex.py
mids/: admin.py  models.py
mids/management/commands/: worker.py
mids/migrations/: 0001_initial.py  0002_start_end_dates_nullable.py  0003_auto_20210414_1149.py
templates/admin/: upload.html
tests/: test_agent_amex.py  test_app_views.py  test_mids_admin.py  test_tasks.py
