[tool.poetry]
name = "eos"
version = "0.0.0"
description = "Manager of Amex MID on/off-boarding."
authors = ["Bink Development <development@bink.com>"]
readme = "README.md"
packages = [
    { include = "eos" },
    { include = "mids" },
    { include = "templates" },
]


[tool.poetry.dependencies]
python = "^3.11"
azure-keyvault = "^4.2.0"
azure-identity = "^1.12.0"
django = "^4.1.13"
psycopg2-binary = "^2.9.5"
redis = "^4.5.4"
requests = "^2.31.0"
rq = "^1.13.0"
sentry-sdk = "^2.8.0"
authlib = "^1.2.0"
tenacity = "^8.2.2"
tzdata = "^2022.7"
gunicorn = "^20.1.0"
dj-database-url = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
black = "^23.1.0"
isort = "^5.12.0"
ptpython = "^3.0.23"
coverage = "^7.2.1"
mypy = "^1.0.1"
xenon = "^0.9.0"
responses = "^0.22.0"
django-stubs = "^1.15.0"
types-requests = "^2.28.11.15"
types-redis = "^4.5.1.4"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
omit = ["manage.py"]
branch = true

[tool.coverage.report]
fail_under = 85
